--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@
 # GEMINI_API_KEYの環境変数名を変更しないこと
 GEMINI_API_KEY=your_gemini_api_key_here 
 # GEMINI_IMAGE_MODEL=
+# Upload image limits (pixels)
+# MAX_IMAGE_WIDTH=8192
+# MAX_IMAGE_HEIGHT=8192
+# MAX_IMAGE_PIXELS=67108864
