Cloud Run向け設定とGCS保存の整備

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,20 @@
-# Example environment variables for the application
+# アプリケーションの環境変数例
 # GEMINI_API_KEYの環境変数名を変更しないこと
 GEMINI_API_KEY=your_gemini_api_key_here 
-# Required: used for session/CSRF signing
+# 必須: セッション/CSRF署名に使用
 SECRET_KEY=replace_with_a_random_secret
-# Optional: debug behavior
+# 任意: デバッグ関連
 APP_ENV=development
 APP_DEBUG=true
+# 任意: データベース（本番はDATABASE_URL必須）
+# DATABASE_URL=sqlite:///app.db
+# 任意: チャット画像バケット（チャット画像保存には必須）
+# CHAT_IMAGE_BUCKET=your-gcs-bucket
 # GEMINI_IMAGE_MODEL=
-# Upload image limits (pixels)
+# 画像アップロード制限（ピクセル数）
 # MAX_IMAGE_WIDTH=8192
 # MAX_IMAGE_HEIGHT=8192
 # MAX_IMAGE_PIXELS=67108864
+# アップロードサイズ制限（バイト）
+# MAX_CONTENT_LENGTH=33554432
+# MAX_FORM_MEMORY_SIZE=33554432
