Update .env example with required variables

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,43 @@
 # アプリケーションの環境変数例
-# GEMINI_API_KEYの環境変数名を変更しないこと
-GEMINI_API_KEY=your_gemini_api_key_here 
-# 必須: セッション/CSRF署名に使用
+
+# === 必須 ===
+# Gemini API キー（互換のため GOOGLE_API_KEY でも可）
+GEMINI_API_KEY=your_gemini_api_key_here
+# セッション/CSRF 署名に使用する秘密鍵
 SECRET_KEY=replace_with_a_random_secret
-# 任意: デバッグ関連
-APP_ENV=development
-APP_DEBUG=true
-# 任意: データベース（本番はDATABASE_URL必須）
+
+# === 本番必須 ===
+# SQLAlchemy が理解できる接続文字列を指定（本番では未設定だと起動エラー）
+# 例: Cloud Run + Cloud SQL の場合
+# DATABASE_URL=postgresql+psycopg2://<USER>:<PASS>@/<DB_NAME>?host=/cloudsql/<INSTANCE_CONNECTION_NAME>
+# 例: ローカル SQLite
 # DATABASE_URL=sqlite:///app.db
-# 任意: チャット画像バケット（チャット画像保存には必須）
+
+# === 任意（動作に応じて設定） ===
+# 開発/本番の切り替え（production 以外は開発扱い）
+APP_ENV=development
+# デバッグ有効化（APP_ENV=production の場合は常に無効）
+APP_DEBUG=true
+# 互換のため Flask 標準のデバッグ指定も参照されます
+# FLASK_DEBUG=1
+
+# チャット画像の保存先 GCS バケット（画像保存を使う場合は必須）
 # CHAT_IMAGE_BUCKET=your-gcs-bucket
-# GEMINI_IMAGE_MODEL=
+
+# 初期ユーザー作成用（初回起動時の管理ユーザー）
+# INITIAL_USER_USERNAME=admin
+# INITIAL_USER_EMAIL=admin@example.com
+# INITIAL_USER_PASSWORD=change-me
+
+# Gemini モデル指定（未指定の場合はデフォルト値を使用）
+# GEMINI_IMAGE_MODEL=gemini-3-pro-image-preview
+# GEMINI_TEXT_MODEL=gemini-1.5-flash
+
 # 画像アップロード制限（ピクセル数）
 # MAX_IMAGE_WIDTH=8192
 # MAX_IMAGE_HEIGHT=8192
 # MAX_IMAGE_PIXELS=67108864
+
 # アップロードサイズ制限（バイト）
 # MAX_CONTENT_LENGTH=33554432
 # MAX_FORM_MEMORY_SIZE=33554432
