--- a/.env.example
+++ b/.env.example
@@ -8,20 +8,37 @@ SECRET_KEY=replace_with_a_random_secret
 
 # === 本番必須 ===
 # SQLAlchemy が理解できる接続文字列を指定（本番では未設定だと起動エラー）
-# 例: Cloud Run + Cloud SQL の場合
-# DATABASE_URL=postgresql+psycopg2://<USER>:<PASS>@/<DB_NAME>?host=/cloudsql/<INSTANCE_CONNECTION_NAME>
+# 例: Cloud Run + Cloud SQL (MySQL/PyMySQL, Unixソケット)
+# DATABASE_URL=mysql+pymysql://<USER>:<PASS>@/<DB_NAME>?unix_socket=/cloudsql/<INSTANCE_CONNECTION_NAME>
 # 例: ローカル SQLite
 # DATABASE_URL=sqlite:///app.db
 
+# DATABASE_URL を使わない場合は、以下の環境変数から MySQL 接続URLが自動構築されます。
+# DB_USER=your_db_user
+# DB_PASSWORD=your_db_password
+# DB_NAME=your_db_name
+# INSTANCE_CONNECTION_NAME=your-gcp-project:region:instance
+# 任意: TCP接続用 (Cloud Run 以外のローカル/MySQL開発向け)
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# 任意: 明示的なソケットパスを使う場合
+# DB_SOCKET=/cloudsql/your-gcp-project:region:instance
+
 # === 任意（動作に応じて設定） ===
-# 開発/本番の切り替え（production 以外は開発扱い）
+# 開発/本番/検証の切り替え（production 以外は開発扱い）
+# 例: development / staging / production
 APP_ENV=development
 # デバッグ有効化（APP_ENV=production の場合は常に無効）
 APP_DEBUG=true
 # 互換のため Flask 標準のデバッグ指定も参照されます
 # FLASK_DEBUG=1
 
-# チャット画像の保存先 GCS バケット（画像保存を使う場合は必須）
+# チャット画像の保存先 (local / gcs)
+# 検証・開発環境は local を推奨（ローカル保存）
+# CHAT_IMAGE_STORAGE=local
+# local の保存先ディレクトリ（instance 配下の相対パスを推奨）
+# CHAT_IMAGE_DIR=chat_images
+# gcs の場合はバケット名を指定
 # CHAT_IMAGE_BUCKET=your-gcs-bucket
 
 # 初期ユーザー作成用（初回起動時の管理ユーザー）
