Cloud Buildの設定ミスっていたので修正

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -51,3 +51,6 @@ steps:
 
 images:
   - ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_AR_REPO}/${_IMAGE_NAME}:$COMMIT_SHA
+
+options:
+  logging: CLOUD_LOGGING_ONLY
